feat:add  config

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,12 @@
+# HOST
+HOST_URL = 'http://localhost:8081'
+HOST = localhost
+PORT = 8081
+
+
 # MySQL DATABASE
 MYSQL_HOST = localhost
-MYSQL_USER = your_mysql_username
-MYSQL_PASSWORD = your_mysql_password
-MYSQL_DATABASE = your_database_name
+MYSQL_USER = root
+MYSQL_PASSWORD = monah
+MYSQL_DATABASE = notesdb
 MYSQL_PORT = 3306
